Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-20134

Foresdb crashes repeatedly with "[FDB ERR: -38] Crash Detected: Last Block not DBHEADER dd in a database file '/data/@fts/default_index_1_56ec93078915a307_577e9974.pindex/store.4'"

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 5.0.0
    • 5.0.0
    • forestdb
    • Untriaged
    • Unknown
    • ForestDB: Oct 17 - Nov 4

    Description

      Build
      4.7.0-857

      Testcase (new)
      ./testrunner -i INI_FILE.ini get-cbcollect-info=True,get-coredumps=True,get-logs=False,stop-on-failure=False,cluster=D:F:F,kvstore=forestdb,GROUP=DGM -t fts.stable_topology_fts.StableTopFTS.create_simple_default_index,cluster=D,F,F,dgm_run=1,active_resident_ratio=10,standard_buckets=1,sasl_buckets=1,fdb_compact_interval=300,fdb_compact_threshold=5,GROUP=DGM

      I have seen this error twice with the same test, so I think it's consistently reproducible.

      Forestdb compaction interval was set to 5 mins, at a threshold of 5%.

      No breakpad dumps were generated for this error, repeated crashes with same error noted.
      Testrunner log - https://gist.github.com/arunapiravi/277b7b8a5a08bafd6eb26e56887ee6b1

      Attaching cbcollect info.

      In .216's fts log, I see -

       
      2016-07-11T17:39:34.748-07:00 [INFO] manager: opening pindex path: /data/@fts/default_index_1_56ec93078915a307_27184a97.pindex
      2016-07-11T17:39:35.759-07:00 [INFO] manager: opening pindex path: /data/@fts/default_index_1_56ec93078915a307_4a7ce4ca.pindex
      2016-07-11T17:39:36.645-07:00 [INFO] manager: opening pindex path: /data/@fts/default_index_1_56ec93078915a307_577e9974.pindex
      [FDB ERR: -38] Crash Detected: Last Block not DBHEADER dd in a database file '/data/@fts/default_index_1_56ec93078915a307_577e9974.pindex/store.4'
       
      fatal error: unexpected signal during runtime execution
      [signal 0xb code=0x1 addr=0xffffffffffffffe8 pc=0x7f87a652400b]
       
      runtime stack:
      runtime.throw(0x122c580, 0x2a)
      	/home/couchbase/.cbdepscache/exploded/x86_64/go-1.6/go/src/runtime/panic.go:530 +0x90 fp=0x7f87957f9f50 sp=0x7f87957f9f38
      runtime.sigpanic()
      	/home/couchbase/.cbdepscache/exploded/x86_64/go-1.6/go/src/runtime/sigpanic_unix.go:12 +0x5a fp=0x7f87957f9fa0 sp=0x7f87957f9f50
       
      goroutine 27 [syscall, locked to thread]:
      runtime.cgocall(0xde18d0, 0xc820598c20, 0x100000000000000)
      	/home/couchbase/.cbdepscache/exploded/x86_64/go-1.6/go/src/runtime/cgocall.go:123 +0x11b fp=0xc820598be8 sp=0xc820598bb8
      github.com/couchbase/goforestdb._Cfunc_fdb_open(0xc820155a00, 0x7f8780032a50, 0xc820153380, 0x0)
      	??:0 +0x41 fp=0xc820598c20 sp=0xc820598be8
      github.com/couchbase/goforestdb.Open(0xc82027ae10, 0x41, 0xc8201559f0, 0x0, 0x0, 0x0)
      	/home/couchbase/jenkins/workspace/couchbase-server-unix/godeps/src/github.com/couchbase/goforestdb/file.go:51 +0x3fb fp=0xc820598ce0 sp=0xc820598c20
      github.com/couchbase/goforestdb.OpenFileKVStore(0xc82027ae10, 0x41, 0xc8201559f0, 0x10fbf98, 0x7, 0xc8201559f8, 0x0, 0x0, 0x0)
      	/home/couchbase/jenkins/workspace/couchbase-server-unix/godeps/src/github.com/couchbase/goforestdb/file.go:246 +0x4b fp=0xc820598d38 sp=0xc820598ce0
      github.com/blevesearch/blevex/forestdb.New(0x7f87a79b7820, 0x19a7580, 0xc8201c4990, 0x0, 0x0, 0x0, 0x0)
      	/home/couchbase/jenkins/workspace/couchbase-server-unix/godeps/src/github.com/blevesearch/blevex/forestdb/store.go:86 +0x7fc fp=0xc820598ee0 sp=0xc820598d38
      github.com/blevesearch/bleve/index/store/moss.initLowerLevelStore(0xc820223f80, 0xc8203ead30, 0x8, 0xc8201c4990, 0x0, 0x7f87a79b7858, 0x19a7580, 0x1, 0x0, 0x0, ...)
      	/home/couchbase/jenkins/workspace/couchbase-server-unix/godeps/src/github.com/blevesearch/bleve/index/store/moss/lower.go:57 +0x597 fp=0xc820599108 sp=0xc820598ee0
      github.com/blevesearch/bleve/index/store/moss.New(0x7f87a79b7820, 0x19a7580, 0xc820223f80, 0x0, 0x0, 0x0, 0x0)
      	/home/couchbase/jenkins/workspace/couchbase-server-unix/godeps/src/github.com/blevesearch/bleve/index/store/moss/store.go:135 +0xf25 fp=0xc8205993c8 sp=0xc820599108
      github.com/blevesearch/bleve/index/store/metrics.New(0x7f87a79b7820, 0x19a7580, 0xc820223f80, 0x0, 0x0, 0x0, 0x0)
      	/home/couchbase/jenkins/workspace/couchbase-server-unix/godeps/src/github.com/blevesearch/bleve/index/store/metrics/store.go:68 +0x384 fp=0xc820599548 sp=0xc8205993c8
      github.com/blevesearch/bleve/index/upside_down.(*UpsideDownCouch).Open(0xc820334a80, 0x0, 0x0)
      	/home/couchbase/jenkins/workspace/couchbase-server-unix/godeps/src/github.com/blevesearch/bleve/index/upside_down/upside_down.go:307 +0x190 fp=0xc820599630 sp=0xc820599548
      github.com/blevesearch/bleve.openIndexUsing(0xc82030b300, 0x3b, 0x0, 0xc82036f110, 0x0, 0x0)
      	/home/couchbase/jenkins/workspace/couchbase-server-unix/godeps/src/github.com/blevesearch/bleve/index_impl.go:203 +0x7b9 fp=0xc820599840 sp=0xc820599630
      github.com/blevesearch/bleve.Open(0xc82030b300, 0x3b, 0x0, 0x0, 0x0, 0x0)
      	/home/couchbase/jenkins/workspace/couchbase-server-unix/godeps/src/github.com/blevesearch/bleve/index.go:246 +0x50 fp=0xc820599890 sp=0xc820599840
      github.com/couchbase/cbft.OpenBlevePIndexImpl(0xc8203eaa90, 0xe, 0xc82030b300, 0x3b, 0xc8200110a0, 0x0, 0x0, 0x0, 0x0, 0x0, ...)
      	/home/couchbase/jenkins/workspace/couchbase-server-unix/goproj/src/github.com/couchbase/cbft/pindex_bleve.go:303 +0x469 fp=0xc820599970 sp=0xc820599890
      github.com/couchbase/cbgt.OpenPIndexImpl(0xc8203eaa90, 0xe, 0xc82030b300, 0x3b, 0xc8200110a0, 0x0, 0x0, 0x0, 0x0, 0x0, ...)
      	/home/couchbase/jenkins/workspace/couchbase-server-unix/goproj/src/github.com/couchbase/cbgt/pindex_impl.go:135 +0x114 fp=0xc820599a28 sp=0xc820599970
      github.com/couchbase/cbgt.OpenPIndex(0xc8201ce840, 0xc82030b300, 0x3b, 0x1, 0x0, 0x0)
      	/home/couchbase/jenkins/workspace/couchbase-server-unix/goproj/src/github.com/couchbase/cbgt/pindex.go:168 +0x5b4 fp=0xc820599bd8 sp=0xc820599a28
      github.com/couchbase/cbgt.(*Manager).LoadDataDir(0xc8201ce840, 0x0, 0x0)
      	/home/couchbase/jenkins/workspace/couchbase-server-unix/goproj/src/github.com/couchbase/cbgt/manager.go:419 +0x693 fp=0xc820599e18 sp=0xc820599bd8
      github.com/couchbase/cbgt.(*Manager).JanitorLoop(0xc8201ce840)
      	/home/couchbase/jenkins/workspace/couchbase-server-unix/goproj/src/github.com/couchbase/cbgt/manager_janitor.go:99 +0x91c fp=0xc820599f88 sp=0xc820599e18
      runtime.goexit()
      	/home/couchbase/.cbdepscache/exploded/x86_64/go-1.6/go/src/runtime/asm_amd64.s:1998 +0x1 fp=0xc820599f90 sp=0xc820599f88
      created by github.com/couchbase/cbgt.(*Manager).Start
      	/home/couchbase/jenkins/workspace/couchbase-server-unix/goproj/src/github.com/couchbase/cbgt/manager.go:222 +0x229
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            apiravi Aruna Piravi (Inactive)
            apiravi Aruna Piravi (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty