MB-20134 Disable log callback during compaction recovery

- As partially compacted file is not a normal file, various kinds of
errors can happen, but they don't need to be reported.

Change-Id: I4b04b75b004b1c36fe9dc912d0ddb463c2fa1bf1
Reviewed-on: http://review.couchbase.org/65819
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: Chiyoung Seo <chiyoung@couchbase.com>